# tradingbot22-backend

./: .dockerignore  .env-copy  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  buildPush.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
airflow/: update-main.py
interactive-brokers/: README.md  alpaca.ipynb  docker-compose.yaml  ibexplore.ipynb
interactive-brokers/ib-gateway-docker-master/: buildPush.sh
kubernetes/: 0_namespace.yaml  backup-cronjob.yaml  basic-auth-sealedsecret.yaml  earnings-update-cronjob.yaml  ingress.yaml  pipelinerun.yaml  postgres-deployment.yaml  postgres-service.yaml  postgres-tradingbot-persistentvolumeclaim.yaml  psql-deployment.yaml  psql-sealed-secret.yaml  psql-secret-sealed.yaml  stoploss-checker.yaml  tradingbot-baseimage-deployment.yaml  tradingbot-baseimage-service.yaml  tradingbot-deployment.yaml  tradingbot-sealed-secret.yaml  update-cronjob.yaml
kubernetes/old/: earnings-update-cronjob.yaml  postgres-deployment.yaml  postgres-service.yaml  postgres-tradingbot-persistentvolumeclaim.yaml  update-cronjob.yaml
longtime-services/: alphavantage-extractor.py  db.py
src/: allowed_stocks.py  alphavantage.py  alpy.py  app.py  bots.py  buysell.py  check_open_stoploss.py  db.py  earnings.py  elastic.py  graphs.py  ib.py  language.py  logger.py  notification.py  portfolio.py  pricing.py  pricing_functions.py  ratings.py  requirements.txt  stoploss_takeprofit.py  update.py  yahoo_extras.py  yfrecommendations.py
tests/: backendtest.py
