[tool.poetry]
name = "tradingbot22-backend"
version = "0.1.0"
description = ""
authors = ["Justin Guese <guese.justin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
pika = "^1.3.2"
requests = "^2.31.0"
pydantic = "^2.4.2"
yfinance = "^0.2.31"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
